--- a/app/index.html
+++ b/app/index.html
@@ -1,4 +1,15 @@
 <!doctype html> <html> <head> <meta charset="utf-8"> <title></title> <meta name="description" content=""> <meta name="viewport" content="width=device-width"> <!-- Place favicon.ico and apple-touch-icon.png in the root directory --> <link rel="stylesheet" href="styles/vendor.9f75b93c.css"> <link rel="stylesheet" href="styles/main.f670410b.css"> <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css"> </head> <body ng-app="restoremyfaithinhumanityApp"> <!--[if lte IE 8]>
 <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade
     your browser</a> to improve your experience.</p>
-<![endif]--> <div ng-view=""></div> <script src="scripts/vendor.e836a7ae.js"></script> <script src="scripts/scripts.dc526a68.js"></script> </body> </html>
+<![endif]--> <div ng-view=""></div> <script src="scripts/vendor.e836a7ae.js"></script> <script src="scripts/scripts.dc526a68.js"></script>
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'OMITTED', 'auto');
+  ga('send', 'pageview');
+
+</script>
+</body> </html>
